# dhamma-channel-automation

./: .dockerignore  .env  .env.example  .env.web.example  .gitignore  .pre-commit-config.yaml  AUTOMATED_WORKFLOW_GUIDE.md  A_create_video.bat  A_create_video.bat.backup  A_create_video_select.bat  BATCH_SCRIPT_GUIDE.md  BLUEPRINT.md  C_create_video_full_auto.bat  Dockerfile  GOOGLE_CREDENTIALS_SETUP.md  GOOGLE_TTS_SETUP.md  GOOGLE_TTS_SUCCESS.md  Makefile  PRODUCTION_QUICKSTART.md  PRODUCTION_READY_SCHEDAR.md  PRODUCTION_WORKFLOW.md  PR_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SSML_GUIDE.md  SYSTEM_STATUS.md  THAI_MALE_VOICE_COMPLETE.md  TTS_AGENT_COMPLETE.md  TTS_GUIDE.md  TTS_PREPROCESSOR_BUGFIX.md  TTS_PREPROCESSOR_GUIDE.md  TTS_UPDATE_SUMMARY.md  USAGE_GUIDE.md  VIDEO_WORKFLOW.md  demo_gpt4_script.py  docker-compose.yml  generate_mock_topics.bat  generate_tts.bat  mkdocs.yml  (+16 more)
.github/: copilot-instructions.md  pull_request_template.md
app/: agent_commands.yml  auth.py  config.py  main.py
audio/: test_google_tts.txt
cli/: __init__.py  main.py
config/: flowbiz_port.env
data/: mock_topics.json  production_history.json  production_history_backup__.json  topic_templates.yaml
docs/: ASSETS_POLICY.md  BASELINE.md  CODEX_PREFLIGHT.md  DEPLOYMENT.md  GUARDRAILS.md  OPS_SAFETY.md  PROJECT_CONTRACT.md  PROMPTS_OVERVIEW.md  ROADMAP.md  SCHEDULER.md  VIDEO_RENDERING.md
examples/: advanced_bi_input.json  agent_template_input.json  analytics_retention_input.json  auto_labeling_input.json  backup_archive_input.json  community_insight_input.json  dashboard_input.json  data_enrichment_input.json  data_sync_input.json  demo_ssml.txt  doctrine_validator_input.json  error_flag_input.json  experiment_orchestrator_input.json  feedback_loop_input.json  format_conversion_input.json  growth_forecast_input.json  integration_input.json  legal_compliance_input.json  localization_input.json  monitoring_input.json  multi_channel_publish_input.json  notification_input.json  personalization_input.json  prompt_pack_input.json  research_retrieval_input.json  sample_script_for_ssml.txt  sample_script_ssml.txt  sample_script_ssml_final.txt  sample_script_ssml_v2.txt  scheduling_publish_input.json  script_outline_input.json  script_writer_input.json  security_input.json  seo_metadata_input.json  thumbnail_generator_input.json  topic_prioritizer_input.json  training_data_input.json  user_feedback_collector_input.json  visual_asset_input.json  (+1 more)
(+1612 files in other folders)
